--- a/css/noiceland.css
+++ b/css/noiceland.css
@@ -93,3 +93,41 @@ body {
   text-transform: uppercase;
   font-family: "Libre Franklin", serif;
 }
+
+.block1 {
+  margin-top: 60px;
+}
+.block1__inner {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-between;
+}
+.block1__item {
+  max-width: 387px;
+  margin-bottom: 50px;
+}
+.block1__h6 {
+  margin: 19px 0 18px 0;
+  font-family: "Libre Franklin", serif;
+  font-weight: 400;
+  color: #999999;
+  font-size: 10px;
+  line-height: 12px;
+  letter-spacing: 1px;
+}
+.block1__p {
+  margin: 0 0 15px 0;
+  font-weight: 400;
+  font-size: 20px;
+  line-height: 24px;
+  max-width: 382px;
+  text-transform: uppercase;
+}
+.block1__h5 {
+  font-family: "Libre Franklin", serif;
+  font-size: 10px;
+  line-height: 12px;
+  font-weight: 700;
+  letter-spacing: 1px;
+  margin: 0;
+}
