--- a/noiceland.scss
+++ b/noiceland.scss
@@ -101,3 +101,44 @@ html {
 		font-family: $second-font;
 	}
 }
+
+.block1 {
+	margin-top: 60px;
+	&__inner {
+		display: flex;
+		flex-wrap: wrap;
+		justify-content: space-between;
+	}
+
+	&__item {
+		max-width: 387px;
+		margin-bottom: 50px;
+	}
+	&__h6 {
+		margin: 19px 0 18px 0;
+		font-family: $second-font;
+		font-weight: 400;
+		color: #999999;
+		font-size: 10px;
+		line-height: 12px;
+		letter-spacing: 1px;
+	}
+
+	&__p {
+		margin: 0 0 15px 0;
+		font-weight: 400;
+		font-size: 20px;
+		line-height: 24px;
+		max-width: 382px;
+		text-transform: uppercase;
+	}
+
+	&__h5 {
+		font-family: $second-font;
+		font-size: 10px;
+		line-height: 12px;
+		font-weight: 700;
+		letter-spacing: 1px;
+		margin: 0;
+	}
+}
