--- a/noiceland.scss
+++ b/noiceland.scss
@@ -142,3 +142,85 @@ html {
 		margin: 0;
 	}
 }
+
+.block2 {
+	margin-top: 40px;
+	&__inner {
+		border-top: 1px solid #E6E6E6;
+	}
+	&__h4 {
+		font-weight: 400;
+		font-family: $second-font;
+		color: #999999;	
+		font-size: 10px;
+		line-height: 12px;
+		letter-spacing: 1px;
+		text-transform: uppercase;
+		margin: 90px 0 30px 0;
+	}
+
+	&__ul {
+		margin: 0;
+		padding: 0;
+		list-style: none;
+		display: flex;
+		justify-content: space-between;
+		flex-wrap: wrap;
+	}
+
+	&__item {
+		max-width: 285px;
+		margin-bottom: 50px;
+	}
+
+	&__img {
+		max-width: 285px;
+		max-height: 187px;
+	}
+
+	&__h6 {
+		margin: 20px 0 18px 0;
+		font-family: $second-font;
+		font-size: 10px;
+		font-weight: 400;
+		line-height: 12px;
+		letter-spacing: 1px;
+		text-transform: uppercase;
+		color: #999999;
+	}
+
+	&__p {
+		margin: 0 0 15px 0;
+		text-transform: uppercase;
+		font-weight: 400;
+		font-size: 19px;
+		line-height: 24px;
+		max-width: 270px;
+	}
+
+	&__h5 {
+		font-family: $second-font;
+		font-size: 10px;
+		font-weight: 700;
+		line-height: 12px;
+		letter-spacing: 1px;
+		margin: 0;
+		text-transform: uppercase;
+	}
+	&__form {
+		text-align: center;
+		margin-top: 40px;
+	}
+
+	&__button {
+		padding: 21px 35px 21px 26px;
+		border: 1px solid;
+		font-family: $second-font;
+		font-size: 10px;
+		font-weight: 400;
+		line-height: 12px;
+		letter-spacing: 1px;
+		text-transform: uppercase;
+		background: none;
+	}
+}
