--- a/noiceland.scss
+++ b/noiceland.scss
@@ -25,10 +25,12 @@ html {
 
 .header {
 	margin-top: 37px;
+	border-bottom: 1px solid #E6E6E6;
 	&__inner {
 		display: flex;
 		justify-content: space-between;
 		align-items: center;
+		margin-bottom: 29px;
 	}
 
 	&__ul {
@@ -54,7 +56,7 @@ html {
 }
 
 .japan {
-	margin-top: 88px;
+	margin-top: 58px;
 	&__inner {
 		display: flex;
 		justify-content: space-between;
@@ -222,5 +224,210 @@ html {
 		letter-spacing: 1px;
 		text-transform: uppercase;
 		background: none;
+	}
+}
+
+.block3 {
+	margin-top: 90px;
+	&__inner {
+		border-top: 1px solid #E6E6E6;
+	}
+	&__h4 {
+		font-weight: 400;
+		font-family: $second-font;
+		color: #999999;	
+		font-size: 10px;
+		line-height: 12px;
+		letter-spacing: 1px;
+		text-transform: uppercase;
+		margin: 90px 0 30px 0;
+	}
+
+	&__ul {
+		display: flex;
+		flex-wrap: wrap;
+		justify-content: space-between;
+		padding: 0;
+		margin: 0;
+		list-style: none;
+	}
+
+	&__li {
+		max-width: 590px;
+		margin-bottom: 50px;
+	}
+
+	&__h6 {
+		margin: 20px 0 18px 0;
+		font-family: $second-font;
+		font-size: 10px;
+		font-weight: 400;
+		line-height: 12px;
+		letter-spacing: 1px;
+		text-transform: uppercase;
+		color: #999999;
+	}
+
+	&__p {
+		margin: 0 0 15px 0;
+		text-transform: uppercase;
+		font-weight: 400;
+		font-size: 19px;
+		line-height: 24px;
+		max-width: 550px;
+	}
+
+	&__h5 {
+		font-family: $second-font;
+		font-size: 10px;
+		font-weight: 700;
+		line-height: 12px;
+		letter-spacing: 1px;
+		margin: 0;
+		text-transform: uppercase;
+	}
+}
+
+.footer {
+	margin-top: 40px;
+	background-color: #141414;
+	padding: 90px 0 80px 0;
+	&__h3 {
+		margin: 0 0 57px 0;
+	}
+	&__img {
+		margin-right: 15px;
+	}
+	&__span {
+		color: #666666;
+		font-family: $second-font;
+		font-size: 10px;
+		letter-spacing: 1px;
+		line-height: 12px;
+		text-transform: uppercase;
+		font-weight: 400;
+	}
+
+	&__mid {
+		display: flex;
+		justify-content: space-between;
+		border-top: 1px solid #4D4D4D;
+	}
+
+	&__h4 {
+		font-family: $second-font;
+		font-weight: 400;
+		font-size: 10px;
+		margin: 60px 0 20px 0;
+		line-height: 12px;
+		letter-spacing: 1px;
+		text-transform: uppercase;
+		color: #666666;
+	}
+
+	&__ul1 {
+		margin: 0;
+		padding: 0;
+		display: flex;
+		list-style: none;
+		flex-wrap: wrap;
+		width: 776px;
+		justify-content: space-between;
+	}
+
+	&__li1 {
+		display: flex;
+		flex-direction: column;
+	}
+
+	&__a {
+		font-size: 14px;
+		line-height: 24px;
+		text-decoration: none;
+		margin: 0 0 15px 0;
+		font-weight: 400;
+		color: white;
+		font-family: $second-font;
+	}
+
+	&__form {
+		margin: 60px 0 0 0;
+		display: flex;
+		flex-direction: column;
+	}
+
+	&__label {
+		color: #666666;
+		font-size: 10px;
+		font-weight: 400;
+		line-height: 12px;
+		letter-spacing: 1px;
+		font-family: $second-font;
+		text-transform: uppercase;
+		margin-bottom: 20px;
+	}
+
+	&__formd {
+		display: flex;
+	}
+
+	&__input {
+		font-family: $second-font;
+		font-size: 10px;
+		font-weight: 400;
+		line-height: 12px;
+		letter-spacing: 1px;
+		padding: 18px 77px 18px 24px;
+	}
+	&__btn {
+		padding: 18px 24px;
+		font-family: $second-font;
+		font-size: 10px;
+		font-weight: 400;
+		line-height: 12px;
+		letter-spacing: 1px;
+		background-color: black;
+		color: white;
+		border: none;
+	}
+
+	&__last {
+		margin: 55px 0 0 0;
+		display: flex;
+		max-width: 600px;
+		justify-content: space-between;
+	}
+
+	&__ul2 {
+		margin: 0;
+		padding: 0;
+		display: flex;
+		list-style: none;
+		flex-direction: column;
+	}
+
+	&__li2 {
+		margin-bottom: 10px;
+	}
+
+	&__h6 {
+		margin: 0 0 10px 0;
+		font-size: 10px;
+		font-weight: 400;
+		line-height: 12px;
+		letter-spacing: 1px;
+		text-transform: uppercase;
+		font-family: $second-font;
+		color: #666666;
+	}
+
+	&__a1 {
+		margin: 0;
+		text-decoration: none;
+		font-size: 14px;
+		font-family: $second-font;
+		font-weight: 400;
+		line-height: 24px;
+		color: white;
 	}
 }
